cabal-version:      2.4
name:               pci
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            BSD-3-Clause
license-file:       LICENSE                   
author:             dopamane
maintainer:         dwc1295@gmail.com

-- A copyright notice.
-- copyright:
category:           FFI
extra-source-files:
    CHANGELOG.md
    README.md

executable pci
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.0.0,
                      bindings-libpci ^>=0.1.0.0
    hs-source-dirs:   app
    ghc-options: -Wall
    default-language: Haskell2010
