cabal-version:      2.4
name:               pci
version:            0.1.0.0
synopsis:           A library for accessing PCI devices
description:        This library enables you to access PCI devices.
                    It is implemented as a high-level wrapper around
                    @bindings-libpci@
                    (<https://hackage.haskell.org/package/bindings-libpci>)
                    which is a low-level binding to the C library:
                    @libpci@ (<https://github.com/pciutils/pciutils>)
                    For an example how to use this library see Example.hs
                    which mirrors the example given in the pciutils github repo.
bug-reports:        https://github.com/standardsemiconductor/pci/issues
license:            BSD-3-Clause
license-file:       LICENSE                   
author:             dopamane
maintainer:         dwc1295@gmail.com
copyright:          2020 Standard Semiconductor <standard.semiconductor@gmail.com>
category:           System, Hardware
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
                  type: git
                  location: git://github.com/standardsemiconductor/pci.git
    
executable example
    main-is:          Example.hs
    build-depends:    base,
                      bindings-libpci,
                      pci
    hs-source-dirs:   example
    ghc-options: -Wall
    default-language: Haskell2010

library
        exposed-modules: System.Pci
        other-modules: System.Pci.Access,
                       System.Pci.Access.Lookup,
                       System.Pci.Access.Parameter,
                       System.Pci.Device,
                       System.Pci.Device.Fill,
                       System.Pci.Device.Description,
                       System.Pci.Device.Capability,
                       System.Pci.Filter,
                       System.Pci.Header
        build-depends: base            >=4.12 && < 4.15,
                       bindings-libpci >=0.4 && < 0.5                       
        hs-source-dirs: src
        default-extensions: DerivingStrategies,
                            GeneralizedNewtypeDeriving
        ghc-options: -Wall
        default-language: Haskell2010
                       